# xrp-telegram-bot

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  =0.25.0  ARCHITECTURE.md  FAQ.md  LICENSE  README.md  _quarto.yml  alembic.ini  backup_lint.py  build.sh  cleanup.ps1  debug_setup.py  dev_utils.py  docker-compose.yml  format.py  generate_test_wallet.py  init.py  init_db.py  migrate.py  mypy.ini  performance_results.json  pyproject.toml  pytest.ini  quick_lint.py  render.yaml  requirements.txt  run.py  shared_constants.py  test_wallet_rLNNenzG.json  test_wallet_rNMJ7JhC.json  test_wallet_rfEdv3iV.json  test_wallet_rnfn5udA.json  validate_deployment.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-presentation.yml  deploy.yml
alembic/: README_MIGRATIONS.md  env.py
alembic/versions/: 0697b09d6ad7_add_beneficiaries_table.py  380bb75f44b2_merge_beneficiaries_and_timezone_.py  a24f8c67e4f3_add_timezone_to_user_settings.py  c389d79b0fb1_initial_migration.py  d65e92630518_add_transaction_idempotency.py
backend/: config.py  constants.py  main.py
backend/api/: auth.py  middleware.py  routes.py  schemas.py  settings_routes.py  webhook.py
backend/database/: __init__.py  connection.py  models.py
backend/services/: __init__.py  cache_service.py  price_service.py  security_service.py  task_queue.py  telegram_service.py  types.py  user_service.py  xrp_monitor.py  xrp_service.py
backend/utils/: __init__.py  encryption.py  idempotency.py  markdown.py  monitoring.py
bot/: constants.py  main.py
bot/handlers/: account.py  base.py  history.py  price.py  settings.py  start.py  transaction.py  wallet.py
bot/keyboards/: menus.py
bot/messages/: templates.py
bot/utils/: __init__.py  formatting.py  timezones.py
docs/: index.html  search.json
presentation/: custom.scss  xrp-telegram-bot-presentation.qmd
tests/: test_backend.py  test_bot.py  test_integration.py  test_perf.py  test_performance.py  test_security.py
